        fix:  listener added before connectTo are now properly listening
+dnssd server refresh (allow declaration)
+dnssd fix among implementation (coherence in full name ...)
+dnssd avahi refresh: !!! still not 100% ok (wait for a stable dbus release and java dbus release and/or pure java dbus)
+dnssd avahi refresh: using dbusjava 2 that is 100% pure java except libunix.so
+dnssd avahi/mdns conflict: fallback on removing trailing "-2" when the hostname to connectTo cannot be found
+uses derefencing in cfg.properties to choose dnssd impl
+added a test !! the first one !!! and some more
+dnssd server for production use
+dnssd server fix when on different machines :-) using ip address for now
*must: solve the castor proliferation problem
*should: avahi usage using dbus using java-dbus 2.0 (pure java + native unix socket library)
*could: dnssd client auto connect/reconnect
*could: dnssd client has a list of expected servers

1.0.3
r1700
        fix:  added some fallback behaviours to avoid exception when really old services are present
        impr: made IncorrectConnectorType a RuntimeException

1.0.2
r1614
2006-10-26
        fix:  implemented properly the sendToOneClient using a ServiceProxy
        impr: performance improvement for introspection connections
        fix:  added missing stream closing causing problems with numerous variable change notification
        impr: made some exceptions RuntimeException
        fix:  removed some more synchronization to allow to findService while doing other operations
        fix:  for OSGi, made the service proxy cache dependent of the service that creates the proxy
        impr: throwing some omiscid exceptions (instead of NPE) for some ServiceProxy methods

1.0.1
r1463
        fix: made variable subscription working properly from the common api
        fix: removed deadlock happening in some stressing tests
        fix: peer id propagation to the connectors after registration

1.0.0
        first release