@@ -26,6 +26,7 @@
 
 package fr.prima.omiscid.dnssd.avahi;
 
+import java.util.Arrays;
 import java.util.Hashtable;
 import java.util.List;
 import java.util.Map;
